# noisyQt

./: .gitignore  README.md  TODO  compare.py  download_weights.sh  main.py  models.yaml  pyproject.toml  requirements.txt  setup.sh
src/: config.py  db.py  denoiser.py  main.py  network_swinir.py  ui.py
src/noisyqt/: __main__.py  denoiser.py  network_swinir.py  noisyqt.py
src/noisyqt/pages/: denoise_page.py
src/pages/: db_page.py  denoise_page.py  load_page.py
src/styles/: app.qss
